--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test":"gulp test",
-    "start": "gulp & mongod & node app.js"
+    "start": "node app.js"
   },
   "author": "sana",
   "homepage": "https://github.com/sanasa/ExpressJsTp3",
